# Abridged_cppSTL

./: .gitignore  fixed_vector.h  kit.h  list.h
CMatrixs_unit_test/: CMakeLists.txt  Matrix.cpp  Matrix.h  build.sh  core_cm4.h  main.cpp
fixed_vector_unit_test/: CMakeLists.txt  main.cpp
fixed_vector_unit_test/remove_test/: CMakeLists.txt  main.cpp
kinematics/: CMakeLists.txt  ChassisKinematics.cpp  ChassisKinematics.h  Chassis_base.cpp  Chassis_base.h  Console.h  Odometer.cpp  Odometer.h  test_case.txt
kinematics/odometer_unit_test/: CMakeLists.txt  main.cpp
math/: CMakeLists.txt  Matrixs.cpp  Matrixs.h
